fix fancybox header z-index and height

--- a/app/assets/stylesheets/style-apfx.css.css
+++ b/app/assets/stylesheets/style-apfx.css.css
@@ -96,7 +96,7 @@ header {
   top: 0;
   background-color: #4e4e4e;
   color: white;
-  z-index: 100; }
+  z-index: 100000; }
   header.raise-up {
     height: 210px; }
     header.raise-up .header {
