--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -121,7 +121,7 @@ header {
   top: 0;
   background-color: $dark-grey;
   color: $white;
-  z-index: 100;
+  z-index: 100000;
   &.raise-up {
     height: 210px;
     .header {
